--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OnlyChairs — Premium Seating Content (Parody)</title>
-  <meta name="description" content="OnlyChairs is a playful parody of subscription platforms. Browse iconic chairs, support your favorite 'creators', and celebrate ergonomic excellence. No real payments — it's just for laughs." />
+  <title>OnlyChairs — Premium Seating Content</title>
+  <meta name="description" content="OnlyChairs is a chair-sharing platform. Browse iconic chairs, support your favorite creators, and celebrate ergonomic excellence." />
   <meta property="og:title" content="OnlyChairs" />
-  <meta property="og:description" content="Premium seating content. Totally SFW. Totally a joke." />
+  <meta property="og:description" content="Premium seating content. 100% Chairs." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#7c3aed" />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%AA%91%3C/text%3E%3C/svg%3E" />
