--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OnlyChairs — Premium Seating Content</title>
-  <meta name="description" content="OnlyChairs is a chair-sharing platform. Browse iconic chairs, support your favorite creators, and celebrate ergonomic excellence." />
+  <title>OnlyChairs — Premium Seating Content (Parody)</title>
+  <meta name="description" content="OnlyChairs is a playful parody of subscription platforms. Browse iconic chairs, support your favorite 'creators', and celebrate ergonomic excellence. No real payments — it's just for laughs." />
   <meta property="og:title" content="OnlyChairs" />
-  <meta property="og:description" content="Premium seating content. 100% Chairs." />
+  <meta property="og:description" content="Premium seating content. Totally SFW. Totally a joke." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#7c3aed" />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%AA%91%3C/text%3E%3C/svg%3E" />
@@ -79,6 +79,12 @@
       .hero h1{font-size:32px}
     }
   </style>
+  <!-- Firebase (optional but recommended for real auth) -->
+  <!-- Create a Firebase project → Build → Authentication (enable Email/Password) → Firestore (Native).  -->
+  <!-- Then paste your web app config below. Using compat SDK to keep this single-file friendly. -->
+  <script defer src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore-compat.js"></script>
 </head>
 <body>
   <header>
@@ -166,12 +172,14 @@
         <div class="logo"><span class="badge">🪑</span><span>OnlyChairs</span></div>
       </header>
       <div class="content">
-        <h3 style="margin:0 0 6px">Welcome back</h3>
-        <p class="sub" style="margin-top:0">Use any name or email — it's just stored locally.</p>
+        <h3 id="authTitle" style="margin:0 0 6px">Welcome back</h3>
+        <p class="sub" style="margin-top:0">Real cloud login via Firebase. Your subscriptions sync across devices.</p>
         <form id="authForm" style="display:flex; flex-direction:column; gap:10px; margin-top:10px">
-          <input class="search" id="authName" placeholder="Display name" required />
-          <input class="search" id="authEmail" placeholder="Email (optional)" />
-          <button class="btn" type="submit">Continue</button>
+          <input class="search" id="authName" placeholder="Display name (signup only)" />
+          <input class="search" id="authEmail" placeholder="Email" type="email" required />
+          <input class="search" id="authPass" placeholder="Password" type="password" required />
+          <button class="btn" type="submit" id="authSubmit">Continue</button>
+          <button class="btn ghost" type="button" id="authMode">Switch to Sign up</button>
         </form>
       </div>
     </div>
@@ -204,14 +212,95 @@
     // --- Local state ---------------------------------------------------------
     const $ = (q,root=document)=>root.querySelector(q);
     const $$ = (q,root=document)=>Array.from(root.querySelectorAll(q));
-    const state = {
-      user: JSON.parse(localStorage.getItem('oc_user')||'null'),
-      subs: JSON.parse(localStorage.getItem('oc_subs')||'[]'),
-      theme: localStorage.getItem('oc_theme')||'dark'
+
+    // Firebase bootstrap (fill in your config below)
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
     };
 
-    document.addEventListener('DOMContentLoaded', () => {
+    async function initFirebase(){
+      try{
+        if(!firebase.apps.length) firebase.initializeApp(firebaseConfig);
+        // Auth state listener
+        firebase.auth().onAuthStateChanged(async (user)=>{
+          state.user = user;
+          await loadSubsFromCloud();
+          updateAuthButtons();
+          renderCreators();
+        });
+        state.ready = true;
+      }catch(err){
+        console.error('Firebase init error', err);
+      }
+    }
+
+    async function onAuthSubmit(e){
+      e.preventDefault();
+      const mode = authModal.dataset.mode || 'login';
+      const email = $('#authEmail').value.trim();
+      const pass = $('#authPass').value;
+      const name = $('#authName').value.trim();
+      try{
+        if(mode==='signup'){
+          const { user } = await firebase.auth().createUserWithEmailAndPassword(email, pass);
+          if(name) await user.updateProfile({ displayName: name });
+        }else{
+          await firebase.auth().signInWithEmailAndPassword(email, pass);
+        }
+        authModal.close();
+      }catch(err){
+        alert(err.message);
+      }
+    }
+
+    function openAuth(mode='login'){
+      authModal.dataset.mode = mode;
+      $('#authTitle').textContent = mode==='signup' ? 'Create your account' : 'Welcome back';
+      $('#authSubmit').textContent = mode==='signup' ? 'Sign up' : 'Log in';
+      $('#authMode').textContent = mode==='signup' ? 'Switch to Log in' : 'Switch to Sign up';
+      $('#authName').style.display = mode==='signup' ? 'block' : 'none';
+      authModal.showModal();
+    }
+
+    function toggleAuthMode(){
+      const mode = (authModal.dataset.mode||'login')==='signup' ? 'login' : 'signup';
+      openAuth(mode);
+    }
+
+    // Cloud persistence for subscriptions (per-user document)
+    function subsDocRef(){
+      if(!state.user) return null;
+      return firebase.firestore().collection('onlychairs').doc(state.user.uid);
+    }
+
+    async function loadSubsFromCloud(){
+      try{
+        if(!state.user){ state.subs = []; return; }
+        const ref = subsDocRef();
+        const snap = await ref.get();
+        state.subs = snap.exists ? (snap.data().subs||[]) : [];
+      }catch(err){ console.warn('Failed to load subs', err); }
+    }
+
+    async function saveSubsToCloud(){
+      try{
+        if(!state.user) return;
+        await subsDocRef().set({ subs: state.subs, updatedAt: new Date() }, { merge: true });
+      }catch(err){ console.warn('Failed to save subs', err); }
+    }
+
+    document.addEventListener('DOMContentLoaded', async () => {
+      await initFirebase();
       applyTheme(state.theme);
+      renderHero();
+      await loadSubsFromCloud();
+      renderCreators();
+      renderTrending();
+      attachUI();
+      updateAuthButtons();
+    });
       renderHero();
       renderCreators();
       renderTrending();
@@ -231,6 +320,20 @@
         applyTheme(state.theme);
         $('#toggleTheme').setAttribute('aria-pressed', state.theme==='light');
       });
+
+      $('#loginBtn').addEventListener('click',()=> openAuth('login'));
+      $('#signupBtn').addEventListener('click',()=> openAuth('signup'));
+      $('#becomeCreator').addEventListener('click',()=>{
+        alert('Creator onboarding coming soon! (Parody site — nothing real here.)');
+      });
+
+      $('#authForm').addEventListener('submit', onAuthSubmit);
+      $('#authMode').addEventListener('click', toggleAuthMode);
+
+      $('#search').addEventListener('input', renderCreators);
+      $('#sort').addEventListener('change', renderCreators);
+      $('#exportBtn').addEventListener('click', exportData);
+    });
 
       $('#loginBtn').addEventListener('click',()=> authModal.showModal());
       $('#signupBtn').addEventListener('click',()=> authModal.showModal());
@@ -254,12 +357,13 @@
     function updateAuthButtons(){
       const loggedIn = !!state.user;
       $('#loginBtn').style.display = loggedIn? 'none':'inline-flex';
-      $('#signupBtn').textContent = loggedIn ? (state.user.name||'Account') : 'Sign up';
-      $('#signupBtn').onclick = loggedIn ? ()=>{
+      $('#signupBtn').textContent = loggedIn ? (state.user.displayName || state.user.email || 'Account') : 'Sign up';
+      $('#signupBtn').onclick = loggedIn ? async ()=>{
         if(confirm('Log out of OnlyChairs?')){
-          localStorage.removeItem('oc_user');
-          state.user = null; updateAuthButtons(); renderCreators();
+          await firebase.auth().signOut();
         }
+      } : ()=> openAuth('signup');
+    }
       } : ()=> authModal.showModal();
     }
 
@@ -316,7 +420,11 @@
     }
 
     function subscribe(id){
-      if(!state.user){ authModal.showModal(); return; }
+      if(!state.user){ openAuth('signup'); return; }
+      if(!state.subs.includes(id)) state.subs.push(id); else state.subs = state.subs.filter(x=>x!==id);
+      saveSubsToCloud();
+      renderCreators(); renderTrending();
+    }
       if(!state.subs.includes(id)) state.subs.push(id); else state.subs = state.subs.filter(x=>x!==id);
       localStorage.setItem('oc_subs', JSON.stringify(state.subs));
       renderCreators(); renderTrending();
@@ -347,7 +455,13 @@
 
     function exportData(e){
       e.preventDefault();
-      const data = { user: state.user, subs: state.subs, timestamp: new Date().toISOString() };
+      const data = { user: state.user ? { uid: state.user.uid, email: state.user.email, name: state.user.displayName } : null, subs: state.subs, timestamp: new Date().toISOString() };
+      const blob = new Blob([JSON.stringify(data,null,2)], {type:'application/json'});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url; a.download = 'onlychairs-data.json'; a.click();
+      URL.revokeObjectURL(url);
+    };
       const blob = new Blob([JSON.stringify(data,null,2)], {type:'application/json'});
       const url = URL.createObjectURL(blob);
       const a = document.createElement('a');
