--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
 
     // Firebase bootstrap (fill in your config below)
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
+      apiKey: "AIzaSyCOaVpJ4vD833QQd_g_K-5hQWeXVu3wfuo",
+      authDomain: "onlychairs-b11e4.firebaseapp.com",
+      projectId: "onlychairs-b11e4",
     };
 
     async function initFirebase(){
