--- a/index.html
+++ b/index.html
@@ -215,10 +215,14 @@
 
     // Firebase bootstrap (fill in your config below)
     const firebaseConfig = {
-      apiKey: "AIzaSyCOaVpJ4vD833QQd_g_K-5hQWeXVu3wfuo",
-      authDomain: "onlychairs-b11e4.firebaseapp.com",
-      projectId: "onlychairs-b11e4",
-    };
+  apiKey: "AIzaSyCOaVpJ4vD833QQd_g_K-5hQWeXVu3wfuo",
+  authDomain: "onlychairs-b11e4.firebaseapp.com",
+  projectId: "onlychairs-b11e4",
+  storageBucket: "onlychairs-b11e4.firebasestorage.app",
+  messagingSenderId: "112133893761",
+  appId: "1:112133893761:web:81bcde40aaf41819822780",
+  measurementId: "G-1SC8TRY4VT"
+};
 
     async function initFirebase(){
       try{
