--- a/index.html
+++ b/index.html
@@ -479,4 +479,5 @@
     console.log(`\n\n📄 OnlyChairs — GitHub Pages quickstart\n\n1) Create a repo named onlychairs (or anything).\n2) Add this index.html to the root (no build step needed).\n3) Commit & push.\n4) Settings → Pages → Deploy from branch → main, /root → Save.\n5) Share your Pages URL!\n\nCustomize: Edit the CREATORS array for names, prices, emojis, and tags.\n`);
   </script>
 </body>
+console.log("Firebase loaded:", firebase.apps.length);
 </html>
